# cursus

Libft/: Makefile  ft _strnstr.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+7 more)
Pmodulo04/: sample_data.json
Pmodulo06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_import_transmutation.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_sacred_scroll.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Pmodulo07/: battle.py  capacitor.py  tournament.py
Pmodulo08/ex1/: loading.py  pyproject.toml  requirements.txt
Pmodulo6/: ft_circular_curse.py  ft_pathway_debate.py
ft_printf/: ExplorarMas.css  ExplorarMas.html  Makefile  ft_aux_pf.c  ft_printf.c  ft_printf.h  ft_putchar_pf.c  ft_puthex_pf.c  ft_putnbr_pf.c  ft_putptr_pf.c  ft_putstr_pf.c  ft_putuint_pf.c  fujo.c
get_next_line/: a.out  archivo.txt  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  gnl_test  maintest.c  (+2 more)
(+155 files in other folders)
