[project]
name = "poesia"
version = "0.1.0"
description = "intento de no-suicidio"
authors = [
    {name = "login"}
]
requires-python = "^3.10"
dependencies = [
    "pandas (<3.0.2)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (<2.4.4)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
